[tool.poetry]
name = "Geckobot"
version = "0.1.0"
description = "A discord bot designed for The Gecko Project."
authors = ["Jordan Romano aka neuralgecko"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
discord-py-slash-command = "^1.2.0"
openai = "^0.6.4"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
